--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
                     <li><a href="#">Profile</a></li>
                     <li><a href="#">New Task</a></li>
                     <li><a href="#">Log Out</a></li>
-                    <li><a href="#">Log In</a></li>
+                    <li><a href="{{ url_for('login') }}">Log In</a></li>
                     <li><a href="{{ url_for('register') }}">Register</a></li>
                 </ul>
             </div>
@@ -36,7 +36,7 @@
             <li><a href="#">Profile</a></li>
             <li><a href="#">New Task</a></li>
             <li><a href="#">Log Out</a></li>
-            <li><a href="#">Log In</a></li>
+            <li><a href="{{ url_for('login') }}">Log In</a></li>
             <li><a href="{{ url_for('register') }}">Register</a></li>
         </ul>
     </header>
@@ -47,7 +47,7 @@
             {% if messages %}
                 {% for message in messages %}
                     <div class="row flashes">
-                        <h4 class="light-blue lighten-4 center-align">{{ message }}</h4>
+                        <h4 class="red lighten-3 center-align">{{ message }}</h4>
                     </div>
                 {% endfor %}
             {% endif %}
